Improvements regarding layers isolation, response code and validations