@@ -1,22 +1,24 @@
 package com.sling.technology.domain.model;
 
 import com.sling.technology.domain.exception.DomainException;
-import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
 
-import static com.sling.technology.utils.Constants.*;
+import static com.sling.technology.domain.exception.DomainMessages.*;
 import static org.junit.jupiter.api.Assertions.*;
 
-public class HotelSearchTest {
+class HotelSearchTest {
+
+    private final LocalDate tomorrow = LocalDate.now().plusDays(1);
+    private final LocalDate dayAfterTomorrow = LocalDate.now().plusDays(2);
 
     @Test
-    void shouldCreateSuccessfulHotelSearchTestWhenSearchIdIsNull() {
+    void shouldCreateSuccessfulHotelSearchWhenSearchIdIsNull() {
         HotelSearch hotelSearch = new HotelSearch(
-                "hotel1", LocalDate.now(), LocalDate.now().plusDays(1), List.of(24), null);
+                "hotel1", tomorrow, dayAfterTomorrow, List.of(24), null);
 
         assertAll(
                 () -> assertEquals("hotel1", hotelSearch.hotelId()),
@@ -26,9 +28,9 @@ public class HotelSearchTest {
     }
 
     @Test
-    void shouldCreateSuccessfulHotelSearchTestWhenSearchIdIsEmpty() {
+    void shouldCreateSuccessfulHotelSearchWhenSearchIdIsEmpty() {
         HotelSearch hotelSearch = new HotelSearch(
-                "hotel1", LocalDate.now(), LocalDate.now().plusDays(1), List.of(24), " ");
+                "hotel1", tomorrow, dayAfterTomorrow, List.of(24), " ");
 
         assertAll(
                 () -> assertEquals("hotel1", hotelSearch.hotelId()),
@@ -39,110 +41,99 @@ public class HotelSearchTest {
 
     @Test
     void shouldThrowExceptionWhenHotelIdIsNull() {
-        try {
-            new HotelSearch(
-                    null, LocalDate.now(), LocalDate.now().plusDays(1), List.of(24), null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_HOTEL_ID, e.getMessage());
-        }
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch(null, tomorrow, dayAfterTomorrow, List.of(24), null));
+
+        assertEquals(HOTEL_ID_REQUIRED, exception.getMessage());
     }
 
     @Test
     void shouldThrowExceptionWhenHotelIdIsEmpty() {
-        try {
-            new HotelSearch(
-                    StringUtils.EMPTY, LocalDate.now(), LocalDate.now().plusDays(1), List.of(24), null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_HOTEL_ID, e.getMessage());
-        }
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("", tomorrow, dayAfterTomorrow, List.of(24), null));
+
+        assertEquals(HOTEL_ID_REQUIRED, exception.getMessage());
     }
 
     @Test
-    void shouldThrowExceptionWhenCheckInIsNull(){
-        try {
-            new HotelSearch(
-                    "hotel1", null, LocalDate.now().plusDays(1), List.of(24), null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_CHECK_IN, e.getMessage());
-        }
+    void shouldThrowExceptionWhenCheckInIsNull() {
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("hotel1", null, dayAfterTomorrow, List.of(24), null));
+
+        assertEquals(CHECK_IN_REQUIRED, exception.getMessage());
     }
 
     @Test
-    void shouldThrowExceptionWhenCheckOutIsNull(){
-        try {
-            new HotelSearch(
-                    "hotel1", LocalDate.now(), null, List.of(24), null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_CHECK_OUT, e.getMessage());
-        }
+    void shouldThrowExceptionWhenCheckOutIsNull() {
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("hotel1", tomorrow, null, List.of(24), null));
+
+        assertEquals(CHECK_OUT_REQUIRED, exception.getMessage());
     }
 
     @Test
-    void shouldThrowExceptionWhenCheckInIsAfterCheckOut(){
-        try {
-            new HotelSearch(
-                    "hotel1", LocalDate.now(), LocalDate.now().plusDays(-1), List.of(24), null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_CHECK_IN_BEFORE_CHECK_OUT, e.getMessage());
-        }
+    void shouldThrowExceptionWhenCheckInIsInThePast() {
+        LocalDate yesterday = LocalDate.now().minusDays(1);
+
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("hotel1", yesterday, tomorrow, List.of(24), null));
+
+        assertEquals(CHECK_IN_PAST, exception.getMessage());
     }
 
     @Test
-    void shouldThrowExceptionWhenCheckInIsEqualsCheckOut(){
-        LocalDate date = LocalDate.now();
-        try {
-            new HotelSearch(
-                    "hotel1", date, date, List.of(24), null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_CHECK_IN_BEFORE_CHECK_OUT, e.getMessage());
-        }
+    void shouldThrowExceptionWhenCheckInIsAfterCheckOut() {
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("hotel1", dayAfterTomorrow, tomorrow, List.of(24), null));
+
+        assertEquals(CHECK_IN_BEFORE_CHECK_OUT, exception.getMessage());
     }
 
     @Test
-    void shouldThrowExceptionWhenAgesIsNull(){
-        try {
-            new HotelSearch(
-                    "hotel1", LocalDate.now(), LocalDate.now().plusDays(1), null, null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_AGES, e.getMessage());
-        }
+    void shouldThrowExceptionWhenCheckInEqualsCheckOut() {
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("hotel1", tomorrow, tomorrow, List.of(24), null));
+
+        assertEquals(CHECK_IN_BEFORE_CHECK_OUT, exception.getMessage());
     }
 
     @Test
-    void shouldThrowExceptionWhenAgesIsEmpty(){
-        try {
-            new HotelSearch(
-                    "hotel1", LocalDate.now(), LocalDate.now().plusDays(1), List.of(), null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_AGES, e.getMessage());
-        }
+    void shouldThrowExceptionWhenAgesIsNull() {
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("hotel1", tomorrow, dayAfterTomorrow, null, null));
+
+        assertEquals(AGES_REQUIRED, exception.getMessage());
     }
 
     @Test
-    void shouldThrowExceptionWhenAgesHasNegativeNumbers(){
-        try {
-            new HotelSearch(
-                    "hotel1", LocalDate.now(), LocalDate.now().plusDays(1), List.of(24, -1), null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_AGE_VALUE, e.getMessage());
-        }
+    void shouldThrowExceptionWhenAgesIsEmpty() {
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("hotel1", tomorrow, dayAfterTomorrow, List.of(), null));
+
+        assertEquals(AGES_REQUIRED, exception.getMessage());
     }
 
     @Test
-    void shouldThrowExceptionWhenAgesHasNullNumbers(){
-        try {
-            new HotelSearch(
-                    "hotel1", LocalDate.now(), LocalDate.now().plusDays(1), Arrays.asList(24, null), null);
-        } catch (DomainException e) {
-            assertEquals(DOMAIN_EXCEPTION_HOTEL_SEARCH_AGE_VALUE, e.getMessage());
-        }
+    void shouldThrowExceptionWhenAgesHasNegativeNumbers() {
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("hotel1", tomorrow, dayAfterTomorrow, List.of(24, -1), null));
+
+        assertEquals(AGE_INVALID, exception.getMessage());
     }
 
     @Test
-    void shouldPreserveAgesOrder(){
+    void shouldThrowExceptionWhenAgesHasNullNumbers() {
+        DomainException exception = assertThrows(DomainException.class, () ->
+                new HotelSearch("hotel1", tomorrow, dayAfterTomorrow, Arrays.asList(24, null), null));
+
+        assertEquals(AGE_INVALID, exception.getMessage());
+    }
+
+    @Test
+    void shouldPreserveAgesOrder() {
         List<Integer> ages = List.of(24, 30, 18);
         HotelSearch hotelSearch = new HotelSearch(
-                "hotel1", LocalDate.now(), LocalDate.now().plusDays(1), ages, null);
+                "hotel1", tomorrow, dayAfterTomorrow, ages, null);
 
         assertEquals(ages, hotelSearch.ages());
     }
@@ -150,8 +141,9 @@ public class HotelSearchTest {
     @Test
     void shouldEnsureAgesIsImmutable(){
         HotelSearch hotelSearch = new HotelSearch(
-                "hotel1", LocalDate.now(), LocalDate.now().plusDays(1), List.of(24, 30, 18), null);
+                "hotel1", tomorrow, dayAfterTomorrow, List.of(24, 30, 18), null);
 
-        assertThrows(UnsupportedOperationException.class, () -> hotelSearch.ages().add(40));
+        List<Integer> ages = hotelSearch.ages();
+        assertThrows(UnsupportedOperationException.class, () -> ages.add(40));
     }
 }
